Bug 328862 r=annie.sullivan Potentially uninitialized variable in RemoveChildAt

Original committer: brettw%gmail.com
Original revision: 1.57
Original date: 2006/02/28 18:26:37